# moto

./: Cargo.toml  README.md  build.rs  lib.rs  main.rs  prefs.rs  rust-toolchain.toml
.cargo/: config.toml
desktop/: app.rs  cli.rs  db.rs  egui_glue.rs  embedder.rs  headed_window.rs  minibrowser.rs  mod.rs  tracing.rs  webview.rs
desktop/protocols/: mod.rs  moto.rs  resource.rs  servo.rs  urlinfo.rs
egl/: servo_glue.rs
platform/macos/: Info.plist
platform/windows/: moto.exe.manifest  moto.wxs
resources/: crash.html  prefs.json
resources/resource_protocol/: newtab.html
