[package]
name = "moto"
version = "0.0.1"
edition = "2021"

[lib]
name = "moto"
path = "lib.rs"
bench = false

[[bin]]
name = "moto"
path = "main.rs"
bench = false

# Some of these dependencies are only needed for a specific target os, but
# since build-scripts can't detect the cargo target os at build-time, we
# must unconditionally add these dependencies. See https://github.com/rust-lang/cargo/issues/4932
[build-dependencies]
vergen = { version = "8.3.2", features = ["git", "git2"] }
# Android and OpenHarmony
gl_generator = "0.14"
# MacOS only
cc = "1.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "Moto"
LegalCopyright = "© Daniel Adams"
OriginalFilename = "moto.exe"
ProductName = "Moto"

[features]
debugmozjs = ["libservo/debugmozjs"]
default = ["layout_2013", "max_log_level", "webdriver"]
jitspew = ["libservo/jitspew"]
js_backtrace = ["libservo/js_backtrace"]
layout_2013 = ["libservo/layout_2013"]
max_log_level = ["log/release_max_level_info"]
media-gstreamer = ["libservo/media-gstreamer"]
multiview = ["libservo/multiview"]
native-bluetooth = ["libservo/native-bluetooth"]
profilemozjs = ["libservo/profilemozjs"]
refcell_backtrace = ["libservo/refcell_backtrace"]
webdriver = ["libservo/webdriver"]
webgl_backtrace = ["libservo/webgl_backtrace"]

[dependencies]
libc = "0.2"
libservo = { git = "https://github.com/servo/servo.git", rev = "f986160" }
cfg-if = "1.0"
log = "0.4"
getopts = "0.2"
url = "2.5"
servo-media = { git = "https://github.com/servo/media" }
mime_guess = "2.0.5"
tokio = "1"
headers = "0.3"
http = "0.2"
directories = "5.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
ipc-channel = "0.18"
jni = "0.21.1"
libloading = "0.8"
serde_json = "1.0"
surfman = { version = "0.9", features = ["sm-angle-default"] }
webxr = { git = "https://github.com/servo/webxr" }

[target.'cfg(not(target_os = "android"))'.dependencies]
backtrace = "0.3"

[target.'cfg(target_env = "ohos")'.dependencies]
env_filter = "0.1.2"
# force inprocess, until libc-rs 0.2.156 is released containing
# https://github.com/rust-lang/libc/commit/9e248e212c5602cb4e98676e4c21ea0382663a12
ipc-channel = { version = "0.18", features = ["force-inprocess"] }
hilog = "0.1.0"
napi-derive-ohos = "0.0.9"
napi-ohos = "0.1"
serde_json = "1.0"
surfman = { version = "0.9", features = ["sm-angle-default"] }
webxr = { git = "https://github.com/servo/webxr" }
ohos-sys = { version = "0.2.1", features = ["xcomponent"] }

[target.'cfg(not(any(target_os = "android", target_env = "ohos")))'.dependencies]
# For optional feature servo_allocator/use-system-allocator
servo_allocator = { path = "../servo/components/allocator" }
arboard = { version = "3" }
egui = { version = "0.28.1" }
egui_glow = { version = "0.28.1", features = ["winit"] }
egui-winit = { version = "0.28.1", default-features = false, features = ["clipboard", "wayland"] }
euclid = "0.22"
gilrs = "0.11.0"
gleam = "0.15"
glow = "0.13.1"
keyboard-types = "0.7"
raw-window-handle = "0.6"
shellwords = "1.0.0"
surfman = { version = "0.9", features = ["sm-x11", "sm-raw-window-handle-06"] }
tinyfiledialogs = "3.0"
webxr = { git = "https://github.com/servo/webxr", features = ["ipc", "glwindow", "headless"] }
winit = "0.29.10"

[target.'cfg(any(all(target_os = "linux", not(target_env = "ohos")), target_os = "windows"))'.dependencies]
image = "0.24"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
sig = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
webxr = { git = "https://github.com/servo/webxr", features = ["ipc", "glwindow", "headless", "openxr-api"] }
windows-sys = { version = "0.59", features = ["Win32_Graphics_Gdi"] }
libservo = { git = "https://github.com/servo/servo.git", rev = "f986160", features = ["no-wgl"] }
